[package]
name = "ncp5623"
description = "Simple driver for the ON Semiconductor NCP5623 I2C RGB LED driver"
authors = ["Jason Scatena <jason.scatena@gmail.com>"]
repository = "https://github.com/jscatena88/ncp5623"
version = "0.1.2"
edition = "2021"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "ncp5623",
]
license = "MIT"
[badges]
maintenance = { status = "passively-maintained" }



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = {version = "0.5.9", default-features = false}
embedded-hal = "0.2.7"

[dev-dependencies]
mockall = "0.11.4"
